[gd_scene load_steps=45 format=3 uid="uid://crg8cukv4mldq"]

[ext_resource type="Script" path="res://game/script/enemy.gd" id="1_si2jw"]
[ext_resource type="Texture2D" uid="uid://cephe6m25e6sl" path="res://asset/animations/Enemy/Walk.png" id="2_2wnaq"]
[ext_resource type="Texture2D" uid="uid://vjfvhca4l6lo" path="res://asset/animations/Enemy/Die.png" id="2_hpdt2"]
[ext_resource type="Texture2D" uid="uid://b3s0p562bj87f" path="res://asset/animations/Enemy/Attack.png" id="2_sbi5c"]
[ext_resource type="Script" path="res://game/scene/enemyDamageArea.gd" id="5_lg01m"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gb72s"]
radius = 6.0
height = 46.0

[sub_resource type="AtlasTexture" id="AtlasTexture_wv2as"]
atlas = ExtResource("2_sbi5c")
region = Rect2(0, 0, 240, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_sev81"]
atlas = ExtResource("2_sbi5c")
region = Rect2(240, 0, 240, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_vk1ck"]
atlas = ExtResource("2_sbi5c")
region = Rect2(480, 0, 240, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1h83"]
atlas = ExtResource("2_sbi5c")
region = Rect2(720, 0, 240, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_1h7j2"]
atlas = ExtResource("2_sbi5c")
region = Rect2(960, 0, 240, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_woi1y"]
atlas = ExtResource("2_sbi5c")
region = Rect2(1200, 0, 240, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hl5a"]
atlas = ExtResource("2_sbi5c")
region = Rect2(1440, 0, 240, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_wk0w5"]
atlas = ExtResource("2_sbi5c")
region = Rect2(1680, 0, 240, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_byygf"]
atlas = ExtResource("2_sbi5c")
region = Rect2(1920, 0, 240, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_irn6w"]
atlas = ExtResource("2_sbi5c")
region = Rect2(2160, 0, 240, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_2r2u7"]
atlas = ExtResource("2_sbi5c")
region = Rect2(2400, 0, 240, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_opvsb"]
atlas = ExtResource("2_sbi5c")
region = Rect2(2640, 0, 240, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3n65"]
atlas = ExtResource("2_sbi5c")
region = Rect2(2880, 0, 240, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrlos"]
atlas = ExtResource("2_sbi5c")
region = Rect2(3120, 0, 240, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlhqj"]
atlas = ExtResource("2_sbi5c")
region = Rect2(3360, 0, 240, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_iu0fy"]
atlas = ExtResource("2_hpdt2")
region = Rect2(0, 0, 240, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtpfl"]
atlas = ExtResource("2_hpdt2")
region = Rect2(240, 0, 240, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_dwunk"]
atlas = ExtResource("2_hpdt2")
region = Rect2(480, 0, 240, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_u31c6"]
atlas = ExtResource("2_hpdt2")
region = Rect2(720, 0, 240, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_4tthy"]
atlas = ExtResource("2_hpdt2")
region = Rect2(960, 0, 240, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_joatg"]
atlas = ExtResource("2_hpdt2")
region = Rect2(1200, 0, 240, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gq85"]
atlas = ExtResource("2_hpdt2")
region = Rect2(1440, 0, 240, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_sjri1"]
atlas = ExtResource("2_hpdt2")
region = Rect2(1680, 0, 240, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_msr0j"]
atlas = ExtResource("2_hpdt2")
region = Rect2(1920, 0, 240, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_scsgp"]
atlas = ExtResource("2_2wnaq")
region = Rect2(0, 0, 240, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7w6o"]
atlas = ExtResource("2_2wnaq")
region = Rect2(240, 0, 240, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvbad"]
atlas = ExtResource("2_2wnaq")
region = Rect2(480, 0, 240, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5m4a"]
atlas = ExtResource("2_2wnaq")
region = Rect2(720, 0, 240, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_74oqa"]
atlas = ExtResource("2_2wnaq")
region = Rect2(960, 0, 240, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5rtw"]
atlas = ExtResource("2_2wnaq")
region = Rect2(1200, 0, 240, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkaea"]
atlas = ExtResource("2_2wnaq")
region = Rect2(1440, 0, 240, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2bhf"]
atlas = ExtResource("2_2wnaq")
region = Rect2(1680, 0, 240, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_22s0i"]
atlas = ExtResource("2_2wnaq")
region = Rect2(1920, 0, 240, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdhww"]
atlas = ExtResource("2_2wnaq")
region = Rect2(2160, 0, 240, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhbt6"]
atlas = ExtResource("2_2wnaq")
region = Rect2(2400, 0, 240, 112)

[sub_resource type="SpriteFrames" id="SpriteFrames_b4ie0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wv2as")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sev81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vk1ck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1h83")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1h7j2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_woi1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hl5a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wk0w5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_byygf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irn6w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2r2u7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_opvsb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3n65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yrlos")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlhqj")
}],
"loop": false,
"name": &"attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iu0fy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtpfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dwunk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u31c6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4tthy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_joatg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gq85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sjri1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_msr0j")
}],
"loop": false,
"name": &"die",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_scsgp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7w6o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvbad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5m4a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74oqa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5rtw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkaea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2bhf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_22s0i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdhww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhbt6")
}],
"loop": true,
"name": &"walk",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_klju7"]
size = Vector2(100, 40)

[sub_resource type="CircleShape2D" id="CircleShape2D_f5er6"]
radius = 40.0

[node name="enemy" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_si2jw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -23)
shape = SubResource("CapsuleShape2D_gb72s")

[node name="RayCast2D_forward" type="RayCast2D" parent="CollisionShape2D"]
position = Vector2(0, 18)
target_position = Vector2(-10, 0)

[node name="RayCast2D_downward" type="RayCast2D" parent="CollisionShape2D"]
position = Vector2(-6, 22)
target_position = Vector2(0, 10)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -56)
sprite_frames = SubResource("SpriteFrames_b4ie0")
animation = &"attack"
autoplay = "walk"
frame = 14
frame_progress = 1.0

[node name="Area2D_Container" type="Node2D" parent="."]

[node name="Area2D_PlayerDetector" type="Area2D" parent="Area2D_Container"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_Container/Area2D_PlayerDetector"]
position = Vector2(-50, -25)
shape = SubResource("RectangleShape2D_klju7")

[node name="Area2D_DamageArea" type="Area2D" parent="Area2D_Container"]
collision_layer = 0
collision_mask = 2
script = ExtResource("5_lg01m")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_Container/Area2D_DamageArea"]
position = Vector2(-50, -25)
shape = SubResource("CircleShape2D_f5er6")

[connection signal="body_entered" from="Area2D_Container/Area2D_PlayerDetector" to="." method="_on_area_2d_player_detector_body_entered"]
[connection signal="body_entered" from="Area2D_Container/Area2D_DamageArea" to="." method="_on_area_2d_damage_area_body_entered"]
[connection signal="body_entered" from="Area2D_Container/Area2D_DamageArea" to="Area2D_Container/Area2D_DamageArea" method="_on_body_entered"]
